--- a/app/globals.css
+++ b/app/globals.css
@@ -9,10 +9,34 @@
   --background : #000000;
   --chat-background : #0D0609;
   --border:#92294C;
+  --scrollbar-track-color: #f2f2f2;
+  --scrollbar-thumb-color: #888888;
 }
 
 
 body {
   color: var(--primary);
   background-color: var(--background);
+}
+
+ 
+
+/* Apply custom scrollbar styles */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: var(--chat-background);
+}
+
+/* Thumb */
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary);
+}
+
+/* Handle hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #92294C;
 }
