login and signup page

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,3 +41,22 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #92294C;
 }
+
+
+input::-webkit-input-placeholder {
+  color: inherit;
+  opacity: 1;
+}
+
+/* Remove webkit input speech button styles */
+input::-webkit-input-speech-button {
+  display: none;
+}
+
+/* Remove webkit search input styles */
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button,
+input::-webkit-search-results-button,
+input::-webkit-search-results-decoration {
+  display: none;
+}
